--- a/testZKTemplate/src/main/webapp/index.zul
+++ b/testZKTemplate/src/main/webapp/index.zul
@@ -3,6 +3,6 @@
 		viewModel="@id('vm')@init('it.test.testZKTemplate.MyViewModel')"
 		validationMessages="@id('vmsgs')">
 		<hlayout>count: <label value="@load(vm.count)" /></hlayout>
-		<button label="add" onClick="@command('cmd')"/>
+		<button label="aggiungi" onClick="@command('cmd')"/>
 	</window>
 </zk>
